--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LfK6-YUAAAAAAMeD2eJabGWBPfDogVGKWpLXItJ"></script>
     <div id="root"></div>
   </body>
 </html>
